docs/wemake-python-styleguide/0.15.2/violations/naming/WPS110.md
---
code: 110
internalName: WrongVariableNameViolation
relatedConfigurationParameter:
- python://wemake_python_styleguide.options.defaults.ALLOWED_DOMAIN_NAMES
- python://wemake_python_styleguide.options.defaults.FORBIDDEN_DOMAIN_NAMES
relatedConstant:
- python://wemake_python_styleguide.constants.VARIABLE_NAMES_BLACKLIST
- python://wemake_python_styleguide.constants.VARIABLE_NAMES_BLACKLIST
title: 'Found wrong variable name: _'
---

{% import "macros.html" as macros with context %}

Forbid blacklisted variable names.

  - Reasoning:  
    We have found some names that are not expressive enough. However,
    they appear in the code more than often. All names that we forbid to
    use could be improved.

  - Solution:  
    Try to use a more specific name instead. If you really want to use
    any of the names from the list, add a prefix or suffix to it. It
    will serve you well.

See {{ macros.wps_constant('python://wemake_python_styleguide.constants.VARIABLE_NAMES_BLACKLIST') }}
for the base list of blacklisted variable names.

Example:

    # Correct:
    html_node_item = None
    
    # Wrong:
    item = None

  - Configuration:  
    This rule is configurable with `--allowed-domain-names`. Default:
    {{ macros.wps_config('python://wemake_python_styleguide.options.defaults.ALLOWED_DOMAIN_NAMES') }}
    
    And with `--forbidden-domain-names`. Default:
    {{ macros.wps_config('python://wemake_python_styleguide.options.defaults.FORBIDDEN_DOMAIN_NAMES') }}
    
    The options listed above are used to create new variable names'
    blacklist starting from
    {{ macros.wps_constant('python://wemake_python_styleguide.constants.VARIABLE_NAMES_BLACKLIST') }}.

<div class="versionadded">

0.1.0

</div>